--- a/src/tutorial/parte-1.html
+++ b/src/tutorial/parte-1.html
@@ -63,8 +63,12 @@
         }
 
         #reiniciar {
+            position:relative;
             z-index: 9999999;
-            margin-top: 10%;                      
+            margin-top: 10%;
+            display:flex;
+            justify-content:left;
+            align-items:left;
         }
     </style>
 </head>
